// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contact /> renders OK (compact mode) 1`] = `
.c1 {
  white-space: normal !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  vertical-align: middle;
}

.c1 .icon {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-right: 8px;
}

.c0 {
  padding: 0px;
  margin: 0px;
}

.c0 .icon {
  display: inline-block;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  font-size: 1rem;
  line-height: 1.5rem;
  vertical-align: middle;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
  margin-bottom: 0.125rem;
  max-width: 15px;
}

.c0 li {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  margin-left: -0.25rem;
  margin-right: 0.25rem;
  list-style-type: none;
  white-space: nowrap;
}

.c0 li a {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  --tw-text-opacity: 1;
  color: rgba(0,0,0,var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 li a:hover {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(91,33,182,var(--tw-bg-opacity));
  border-radius: 0.375rem;
}

.c0 li a:hover .icon {
  color: white;
}

.c0 a::after {
  content: " ➜";
  margin-right: 0.25rem;
}

.c0 .icon {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
}

.c0 a {
  padding-right: 0.25rem;
}

.c0 li,
.c0 a {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity)) !important;
}

.c0 li {
  padding: 0px;
  margin: 0px;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0 li a::after {
  content: none;
}

.c0 li:nth-of-type(1) {
  margin-top: 0px;
}

<ul
  class="c0"
  data-testid="contact"
>
  <li>
    <a
      data-testid="contactEmail"
      href="mailto:kayak@example.com"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
        />
        <polyline
          points="22,6 12,13 2,6"
        />
      </svg>
       
      kayak@example.com
    </a>
  </li>
  <li>
    <a
      data-testid="contactLinkedin"
      href="example.com"
      rel="noreferrer"
      target="_blank"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
        />
        <rect
          height="12"
          width="4"
          x="2"
          y="9"
        />
        <circle
          cx="4"
          cy="4"
          r="2"
        />
      </svg>
       
      exampledin
    </a>
  </li>
  <li
    class="c1"
    data-testid="contactAddress"
    id="address"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
    <span>
      Example City
      , 
      California,
       
      US
    </span>
  </li>
</ul>
`;

exports[`<Contact /> renders OK 1`] = `
.c1 {
  white-space: normal !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  vertical-align: middle;
}

.c1 .icon {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-right: 8px;
}

.c0 {
  padding: 0px;
  margin: 0px;
}

.c0 .icon {
  display: inline-block;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  font-size: 1rem;
  line-height: 1.5rem;
  vertical-align: middle;
  --tw-text-opacity: 1;
  color: rgba(77,54,140,var(--tw-text-opacity));
  margin-bottom: 0.125rem;
  max-width: 15px;
}

.c0 li {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  margin-left: -0.25rem;
  margin-right: 0.25rem;
  list-style-type: none;
  white-space: nowrap;
}

.c0 li a {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  --tw-text-opacity: 1;
  color: rgba(0,0,0,var(--tw-text-opacity));
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 li a:hover {
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgba(91,33,182,var(--tw-bg-opacity));
  border-radius: 0.375rem;
}

.c0 li a:hover .icon {
  color: white;
}

.c0 a::after {
  content: " ➜";
  margin-right: 0.25rem;
}

<ul
  class="c0"
  data-testid="contact"
>
  <li>
    <a
      data-testid="contactEmail"
      href="mailto:john@gmail.com"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
        />
        <polyline
          points="22,6 12,13 2,6"
        />
      </svg>
       
      john@gmail.com
    </a>
  </li>
  <li
    class="c1"
    data-testid="contactAddress"
    id="address"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"
      />
      <circle
        cx="12"
        cy="10"
        r="3"
      />
    </svg>
    <span>
      San Francisco
      , 
      California,
       
      US
    </span>
  </li>
</ul>
`;
